fix popup close button and geolocation popup text align

--- a/src/features/Geolocation/ui/GeolocationPopup/GeolocationPopup.module.scss
+++ b/src/features/Geolocation/ui/GeolocationPopup/GeolocationPopup.module.scss
@@ -20,4 +20,5 @@
 
 .itemName {
   font-weight: 600;
+  text-align: start;
 }
