--- a/src/shared/ui/Popup/Popup.module.scss
+++ b/src/shared/ui/Popup/Popup.module.scss
@@ -36,11 +36,10 @@
   opacity: 0;
 }
 
-.popup{
-  &__close{
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    z-index: 2;
-  }
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  z-index: 2;
 }
